[package]
name = "can-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
can = "0.2.0"
embedded-can = "0.4.1"
serde = {version = "1.0.196", features = ["derive"]}
serde_yaml = "0.9.31"
socketcan = "3.3.0"
